# di-bot

./: .gitignore
common_include/: .gitignore  UARTmsgs.hpp  serialMSG.hpp
due/: motor_driver.ino
due/include/: cmd_flag.hpp  encoder.hpp  pin_defines.hpp  pwm_controller.hpp
due/motor_driver/: .motor_driver.ino.swp  motor_driver.ino
install/: local_setup.sh  setup.sh
overview/: project_aims
pi/src/control/: CMakeLists.txt  package.xml
pi/src/control/src/: .due_hw_interface.cpp.swp  .kb_input.hpp.swp  PID.hpp  due_hw_interface.cpp  input.hpp  kb_input.hpp  kb_input_handler.cpp  kb_screen_handler.hpp  mec_wheel_controller.cpp  mec_wheel_controller.hpp  mech_wheel_controller.cpp  mech_wheel_controller.hpp
pi/src/control/src/include/: kb_input.hpp  kb_screen_handler.hpp  mec_wheel_controller.hpp
pi/src/sensors/src/: imu_handler.cpp  wheel_odometry.cpp
pi/src/urdf/: CMakeLists.txt  package.xml
pi/src/urdf/src/: .DCMR-4W01.urdf.swp  DCMR-4W01.urdf
src/control/: package.xml
src/description/: package.xml
src/navigation/: package.xml
src/sensors/: package.xml
